--- a/app/receiver/serverless.yml
+++ b/app/receiver/serverless.yml
@@ -9,7 +9,21 @@ provider:
   name: aws
   runtime: nodejs20.x
   region: us-east-2
+  environment:
+    AHT20SENSOR_TABLE: aht20sensor-${opt:stage, "dev"}
+  iam:
+    role:
+      statements:
+        - Effect: Allow
+          Action:
+            # - dynamodb:Query
+            # - dynamodb:Scan
+            # - dynamodb:GetItem
+            - dynamodb:PutItem
+            # - dynamodb:UpdateItem
+            # - dynamodb:DeleteItem
+          Resource: "arn:aws:dynamodb:${opt:region, self:provider.region}:*:table/${self:provider.environment.AHT20SENSOR_TABLE}"
 
 functions:
-  hello:
-    handler: handler.hello
+  handleSensorData:
+    handler: handler.handleSensorData
