--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "createDocs": "jsdoc ./ -r -c ./.jsdoc.conf.json -d docs",
+    "lint": "eslint --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
