--- a/app/receiver/package.json
+++ b/app/receiver/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.598.0"
+    "@aws-sdk/client-dynamodb": "^3.598.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint-plugin-jsdoc": "^48.2.12"
