--- a/app/API/package.json
+++ b/app/API/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.598.0",
-    "@aws-sdk/util-dynamodb": "^3.602.0"
+    "@aws-sdk/lib-dynamodb": "^3.602.0"
   },
   "devDependencies": {
     "eslint-plugin-jsdoc": "^48.2.12"
