--- a/app/receiver/package.json
+++ b/app/receiver/package.json
@@ -7,13 +7,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Steve Martinez",
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.598.0",
     "uuid": "^10.0.0"
-  },
-  "devDependencies": {
-    "eslint-plugin-jsdoc": "^48.2.12"
   }
 }
